Layout issue in report creation wizard for visual theme Havana cuba-platform/reports#207

--- a/modules/web/themes/havana/components/label/label.scss
+++ b/modules/web/themes/havana/components/label/label.scss
@@ -44,7 +44,6 @@
 
   .v-label-semi-bold-label {
     font-weight: 600;
-    line-height: 26px;
   }
 
   .#{$primary-stylename} pre {
